# openloop

./: .gitignore  ARCHITECTURE-PROPOSAL.md  AUTONOMOUS-AGENTS.md  CAPABILITIES-ADDENDUM.md  CAPABILITIES.md  CLAUDE.md  CODE-REVIEW-FIXES.md  FUTURE-CAPABILITIES.md  GUIDE.md  IMPLEMENTATION-PLAN-PHASE12.md  IMPLEMENTATION-PLAN-PHASE8.md  IMPLEMENTATION-PLAN.md  INTEGRATION-CAPABILITIES.md  Makefile  PROGRESS.md  README.md  SPIKE-AGENT-RUNTIME-OPTIONS.md  pyproject.toml  session-manager-refactor.md
.claude/: settings.json
agents/: agents.md  claude.md
agents/skills/eng-manager/: SKILL.md
backend/: alembic.ini
backend/alembic/: env.py
backend/openloop/: database.py  logging_config.py  main.py
backend/tests/: conftest.py  test_logging_config.py  test_task_8_3.py  test_task_9_1.py
contract/: enums.py  openapi.json  sse_events.py
frontend/: index.html  openapi.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: 01-first-run.spec.ts  02-space-navigation.spec.ts  03-item-crud.spec.ts  04-conversation-lifecycle.spec.ts  05-agent-management.spec.ts  06-automations.spec.ts  07-kanban-board.spec.ts  08-search.spec.ts  09-settings.spec.ts  10-space-settings.spec.ts  11-keyboard-shortcuts.spec.ts  12-home-dashboard.spec.ts  13-empty-states.spec.ts  14-ui-polish.spec.ts  15-navigation.spec.ts  live-integration.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: test_phase3.py
scripts/: backup_gdrive.py  backup_local.py  export_openapi.py  register_automation_templates.py  register_skills.py  seed.py
tests/e2e/: test_automations.py
(+305 files in other folders)
