[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openloop"
version = "0.1.0"
description = "OpenLoop — Personal AI Command Center"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "claude-agent-sdk>=0.1.51",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "croniter>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "contract", "scripts"]
extend-exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "llm: marks tests that call the real Claude SDK (deselect with '-m \"not llm\"')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend.openloop*", "contract*", "scripts*"]
